# Webapp-Fastapi-N_takahashi

./: .env  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.in  requirements.txt  ライブラリの追加の仕方.txt
.github/workflows/: ci.yml  lint.yml  lock-check.yml
app/: auth.py  crud.py  database.py  detabase.py  models.py  schemas.py
app/routers/: account.py  tag.py  todo.py
app/templates/: todo_list.html
migration/: env.py
migration/versions/: 0dd7c6b601e1_initial_migration_version_1.py  1a1f4e048f36_add_user_table.py  57c233bbcc62_create_all_tables.py  7ee3f652716e_create_initial_tables.py  aeeb0e9aa4df_drop_todo_tag_column.py
static/: login.css  register.css  tag_detail.css  tag_list.css  tag_update.css  todo_create.css  todo_detail.css  todo_list.css
templates/: register.html  tag_create.html  tag_detail.html  tag_list.html  todo_create.html  todo_detail.html  todo_list.html  todo_update.html
templates/account/: login.html  register.html
templates/tag/: tag_detail.html  tag_list.html  tag_update.html
templates/todo/: todo_create.html  todo_list.html  todo_update.html
tests/: test_account.py  test_main.py  test_tag.py  test_tag_02.py  test_todo.py  test_todo_02.py
