[project]
name = "fastapi-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "fastapi-csrf-protect>=1.0.7",
    "gunicorn>=26.0.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.29",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.47.0",
]
