[project]
name = "fastapi-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pyjwt[crypto]>=2.10.0",
    "slowapi>=0.1.9",
    "pydantic>=2.0.0",
]
