[project]
name = "fastapi-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy>=2.0.50",
    "psycopg2-binary>=2.9.0",
    "pyjwt[crypto]>=2.10.0",
    "slowapi>=0.1.9",
    "pydantic>=2.0.0",
    "alembic>=1.13.1",
    "gunicorn>=26.0.0",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "python-multipart>=0.0.32",
    "pytest>=9.0.3",
]
